<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">

     <Checkbox
     	android:id = "@+id/chkSelect"
     	android:visibility = "visible"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:text = "@string/chk1"
     />
	<Checkbox
     	android:id = "@+id/chkSelect"
     	android:visibility = "visible"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:text = "@string/chk2"
     />
     
	<Checkbox
     	android:id = "@+id/chkSelect"
     	android:visibility = "visible"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:text = "@string/chk3"
     />
     
	     
 </LinearLayout>
 